--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -9,13 +9,8 @@ server {
       proxy_pass http://client;
   }
 
-  location /api/v1/tickets {
-    proxy_pass http://backend:8000/api/v1/tickets;
+  location /api/v1 {
+    proxy_pass http://backend:8000/api/v1;
   }
-
-  location /api/v1/comments {
-    proxy_pass http://backend:8000/api/v1/comments;
-  }
-
 
 }
