--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY package.json ./
 #COPY package-lock.json ./
 COPY ./ ./
+RUN npm i react-scripts
 RUN npm i
-EXPOSE 3000
 CMD ["npm", "start"]
 
